--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==4.5.0
 sphinx-js==3.1.2
+sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
